# AureaFinance

./: .env.example  .eslintrc.json  .gitignore  AUDIT_REPORT.md  DATABASE_NOTES.md  DELIVERY_MANIFEST.md  PATCH_NOTES.md  README.md  SECURITY_NOTES.md  VALIDATION.md  apply-fixes.mjs  dev-full.txt  doctor-full.txt  doctor_output.txt  domain-smoke.mjs  drizzle.config.ts  globals.d.ts  install-full.txt  mega-scan-chatgpt.ps1  package.json  pnpm-lock.yaml  project-scan-lite.md  repair-import-batch-meta.txt  scan-project.mjs  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  typecheck-full.txt  vitest.config.ts
_chatgpt_scan/: 00-summary.txt  01-git-summary.txt  02-package-summary.txt  03-useful-file-tree.txt  04-selected-file-dump.txt  05-skipped-files.txt
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
components/: app-shell.tsx  batch-actions.tsx  confirm-dialog.tsx  confirm-form.tsx  empty-state.tsx  mode-toggle.tsx  page-header.tsx  section-header.tsx  sidebar.tsx  stat-card.tsx  theme-provider.tsx  theme-toggle.tsx  topbar.tsx
cryptopro_minimal/: .gitignore  README.md  dados_mercado.py  main.py  portfolio_db.sample.json  pyproject.toml
cryptopro_minimal/src/cryptopro/: __main__.py  app.py  config.py  portfolio.py  pricing.py  utils.py
db/: client.ts  schema.ts  seed.ts
docs/: AUDIT_REPORT.md  DEPLOYMENT.md  HANDOFF.md  TECHNICAL_DECISIONS.md  TESTING.md  architecture.md  beginner-setup.md  data-model.md  design-system.md  interview-prep.md  migration-plan.md  planilha-origem.md  (+2 more)
(+137 files in other folders)
