[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptopro"
version = "1.0.0"
description = "Minimal Apple-like portfolio dashboard with CustomTkinter + Selenium price fetcher"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SEU_NOME" }]
dependencies = [
  "customtkinter>=5.2.0",
  "selenium>=4.15.0",
  "webdriver-manager>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
